# StableStart

./: .gitignore  README.md  alembic.ini  pyproject.toml  stablestart.db
alembic/: env.py
alembic/versions/: 8f8d60b86959_init.py
app/: main.py  main_old.py
app/api/: sim_api.py
app/core/: simulation_engine.py  templates.py
app/db/: connection.py  init_db.py  master_loader.py  models.py  schema.py  seed.py
app/services/: bootstrap_service.py  init_service.py  query_service.py  simulation_service.py  snapshot_service.py
app/utils/: time_utils.py
app/world/: generator.py  preview.py  seed.py  templates.py
docs/: SUMMARY.md
docs/brain_storming/: 20260301_001.md  20260301_002.md  20260301_003.md  20260301_004.md  20260301_005.md  20260301_006.md  20260301_007.md  20260301_008.md  20260301_009.md  20260301_010.md  20260301_011.md  20260301_012.md  20260301_013.md  20260301_014.md  GameDesign_20260301_001.md  GameDesign_20260302_001.md  Trainer_20260301_001.md  Trainer_20260301_002.md  Trainer_20260301_003.md  Trainer_20260302_001.md  design_directory_setting.md  evo_sim_20260301_001.md  evo_sim_20260301_002.md  evo_sim_20260301_003.md  evo_sim_20260301_004.md  (+16 more)
godot/: project.godot
scripts/: init_world.py
simulation/: evolution_test.py  evolution_test10.py  evolution_test2.py  evolution_test3.py  evolution_test4.py  evolution_test5.py  evolution_test6.py  evolution_test7.py  evolution_test8.py  evolution_test9.py  pickup_evolution_test4.py  pickup_evolution_test6.py  pickup_evolution_test7.py  pickup_evolution_test8.py  pyproject.toml
(+14 files in other folders)
